--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT=3000
-SESSION_SECRET='super session secret'
+SESSION_SECRET=cappuccino
+
+MONGODB_URI='mongodb+srv://Janstopot:1qazxsw2@cluster0.yx19v.mongodb.net/exp-ssr-file-upload?retryWrites=true&w=majority'
+
+
